src/test/deca/codegen/valid/objet/ClassSameParamAndField.deca
// Description : test with a param and a field of same ident
// Result : pass
class A{
    int x;
    void setX(int x){
    	this.x = x;
    }

}